fix(medical-record): remove unnecessary timestamp updates and comments for clarity